--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "version": "0.1.8",
   "dependencies": {},
   "devDependencies": {
+    "mime":"*",
+
     "grunt": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-jade": "*",
