removing external servers

--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "version": "0.1.8",
   "dependencies": {},
   "devDependencies": {
-    "mime":"*",
-
     "grunt": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-jade": "*",
@@ -17,7 +15,6 @@
     "grunt-contrib-concat":"*",
     "grunt-contrib-clean":"*",
     "grunt-contrib-connect":"*",
-    "grunt-contrib-cssmin":"*",
-    "grunt-shell":"*"
+    "grunt-contrib-cssmin":"*"
   }
 }
